<resources>
    <string name="app_name">Who Goes First</string>
    <string name="select_random_team">Select Random Team</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="team_ones_name">Team one\'s name</string>
    <string name="team_twos_name">Team two\'s name</string>
    <string name="clear_teams">Clear Teams</string>
    <string name="confirmation_message">%1$s will play today!</string>
    <string name="will_play_today">%1$s will play today!</string>
</resources>